# muleforge

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  USAGE.md
cli/: package.json  tsconfig.json
core/: Cargo.toml
core/src/: lib.rs
core/src/ast/: camel_ir.rs  mod.rs
core/src/dataweave/: mod.rs  patterns.rs
core/src/docgen/: debugging.rs  deployment.rs  flow_pages.rs  local_setup.rs  migration_overview.rs  mod.rs  testing.rs
core/src/emitter/: checklist.rs  ci_emitter.rs  dataweave_emitter.rs  docker_compose.rs  env_generator.rs  kong_emitter.rs  makefile_generator.rs  mod.rs  route_diagram.rs  routes_emitter.rs  tests_emitter.rs
core/src/git/: mod.rs
core/src/llm/: claude.rs  mod.rs  openai.rs
core/src/mapper/: mod.rs
core/src/src/: lib.rs
core/src/src/ast/: mule_ast.rs
core/src/src/dataweave/: converter.rs  patterns.rs
core/src/src/docgen/: architecture.rs  contributing.rs  migration_gotchas.rs  observability.rs  readme.rs  runbook.rs
core/src/src/emitter/: api_copier.rs  config_emitter.rs  java_copier.rs  k8s_emitter.rs  mod.rs  munit_scaffold.rs
core/src/src/git/: acquire.rs  emit.rs
core/src/src/llm/: ollama.rs
core/src/src/mel/: mod.rs
core/src/src/parser/: mod.rs  normalizer.rs
core/src/src/report/: mod.rs
core/tests/: integration_test.rs
docs/: ROADMAP.md
mappings/: amqp.yaml  batch.yaml  choice.yaml  db.yaml  email.yaml  error-handler.yaml  file.yaml  ftp.yaml  http.yaml  jms.yaml  kafka.yaml  objectstore.yaml  salesforce.yaml  scheduler.yaml  sftp.yaml  (+2 more)
(+19 files in other folders)
